--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,4 @@
-@import 'flatpickr/dist/themes/airbnb.css';
+/* @import 'flatpickr/dist/themes/airbnb.css'; */
 
 html {
   box-sizing: border-box;
@@ -9,22 +9,19 @@ html {
   box-sizing: inherit;
 }
 
-html,
-body {
-  font-family: 'Poppins, Rubik, sans-serif';
-}
-
 .custom-datapicker-input {
   border: 1px solid #cbd5e0;
   width: 100%;
   border-radius: 0.375rem;
   height: 2.5rem;
-  padding: 1rem;
+  padding: 0.25rem 1rem;
   font-size: 0.875rem;
+  color: var(--chakra-colors-secondaryGray-800);
 }
 .custom-datapicker-input-dark {
   background: inherit;
   border-color: inherit;
+  color: var(--chakra-colors-white);
 }
 .custom-datapicker-input-error {
   background: inherit;
@@ -32,7 +29,7 @@ body {
   box-shadow: 0 0 0 1px #e53e3e;
 }
 
-.custom-datapicker-input-error {
+.custom-datapicker-input-error-dark {
   background: inherit;
   border-color: #fc8181;
   box-shadow: 0 0 0 1px #fc8181;
